--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^12.3.0",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
