--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "i18next": "^19.8.4",
     "lodash": "^4.17.20",
@@ -62,5 +63,6 @@
     "@storybook/node-logger": "^6.1.9",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.9"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
