--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.1.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
