--- a/package.json
+++ b/package.json
@@ -18,21 +18,26 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.1.0",
     "lodash": "^4.17.20",
+    "notistack": "^1.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.5",
+    "react-player": "^2.8.2",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "screenfull": "^5.1.0",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -68,7 +73,8 @@
     "@storybook/node-logger": "^6.1.9",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.9",
-    "@types/react-redux": "^7.1.15"
+    "@types/react-redux": "^7.1.15",
+    "http-proxy-middleware": "^0.19.1"
   },
   "proxy": "http://localhost:4000"
 }
