--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "screenfull": "^5.1.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.1",
+    "video.js": "^7.11.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -74,6 +75,7 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.9",
     "@types/react-redux": "^7.1.15",
+    "@types/video.js": "^7.3.15",
     "http-proxy-middleware": "^0.19.1"
   },
   "proxy": "http://localhost:4000"
